在复杂度文件夹下增加了几行代码

--- a/复杂度分析/复杂度概念分析.md
+++ b/复杂度分析/复杂度概念分析.md
@@ -10,8 +10,6 @@ fn代表，每行代码的执行次数总和
 
 ### 复杂度分析的预先要求
 
-
-
 算法的执行效率，是算法代码执行的时间。这句话怎么讲？有一个标准吧，不然谁知道每行代码具体的执行时间是什么？
 
 代码示例
@@ -24,10 +22,24 @@ fn代表，每行代码的执行次数总和
 		}
 		return sum;
 	}
-
 ```
 
 第2行到第4行代码是3unit_time,第五行，2n*unit_time +2n*n*unit_time
 
+
+
+每个函数、也就是每个模块可以判断大概执行的时间复杂度是多少。
+写完下面的代码，也不知道怎么滴，好像有点感受了对于时间复杂度。
+```
+//这个函数的时间复杂度是O(n)
+function cal(n) {
+		let sum = 0;
+		let i = 1;
+		for (i; i<= n; ++i) {
+			sum = sum + i;
+		}
+		return sum;
+	}
+```
 
 
