温习时间复杂度的概念

--- a/复杂度分析/复杂度概念分析.md
+++ b/复杂度分析/复杂度概念分析.md
@@ -42,4 +42,38 @@ function cal(n) {
 	}
 ```
 
+时间复杂度分析，分析的是代码执行的时间，怎么分析一段代码的时间复杂度？
+
+1.只关注循环执行次数最多的一段代码
+我们通常会忽略掉公式中的常量、低阶、系数，对应一两行代码、一次循环的代码、循环次数最多一段代码。
+
+例如
+```
+1  function cal(n) {
+2  	let sum = 0;
+3  	let i = 1;
+4  	for(i; i <= n ; ++i) {
+5  		sum = sum + i
+6  	}
+7  	return sum
+8  }
+```
+其中第2行和第3行代码都是常量级的执行时间，与n的大小无关，所以对于时间复杂度没有影响。循环次数最多的是第4行和第5行代码，所以这块代码要重点分析。这两行代码被执行了n次，所以总的时间复杂度就是O(n)。
+
+根据时间的必要难度，提取的必要难度。用自己的话来解释一下「时间复杂度」这个概念，
+
+时间复杂度这个概念，是建立在数据结构和算法基础之上的一个概念。可以说，数据结构和算法先要存在这个世上，才有时间复杂度的故事。学习这个概念不要忘了它的根基，之后一系列的在时间复杂度延伸的概念都离不开它的根基。
+
+就像，欧几里得的《几何原本》的那五条公理，“用公理化的体系，不但奠定了整个几何学的基础，也制定了整个科学研究的方法。”
+
+现在可以讲解，时间复杂度概念的内涵和外延了，时间复杂度的内涵：代码的运行时间，也是算法的执行效率。
+时间复杂度的外延：T(n) = O(fn),T(n)
+
+表示代码执行的总时间，fn代表代码执行的次数总和。O代表，代码执行的总时间与代码执行的总次数成正比。
+
+理论，知道了，就要去实践了，知行合一。
+
+
+
+
 
