复杂度分析

--- a/复杂度分析/复杂度概念分析.md
+++ b/复杂度分析/复杂度概念分析.md
@@ -73,6 +73,27 @@ function cal(n) {
 
 理论，知道了，就要去实践了，知行合一。
 
+记得，时间复杂度的概念和外延。时间复杂度的预先条件，必然是数据结构与算法。
+
+T(n) = O(f(n))
+f(n)表示代码执行的总次数，可以是一次函数，可以是常量、也可以说二阶函数、多阶函数。
+你知道，现在的变量完全在于f(n),如果f(n)是静止的，那么时间复杂度也不必要去分析了
+
+王争老师给出了三个比较实用的方法，来分析一段代码的时间复杂度？
+
+1.只关注循环次数最多的代码的一段代码
+2.加法法则：总复杂度等于量级最大的那段代码的复杂度
+3.乘法法则：嵌套代码的复杂度等于嵌套内外代码复杂度的乘积
+
+这三个实用方法的前提是：T(n) = O(f(n)),根据f(n)的变化来制定的三个法则。
+
+f(n) = 2n + 2  f(n) = logn
+f(n) = 2n*n + 2n + 2
+f(n) = n*n*n
+f(n) = n*logn
+
+
+
 
 
 
